some changes on header

--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
             <input type="email" class="header__input col-lg-4" placeholder="E-mail" />
             <input type="tel" class="header__input col-lg-4" placeholder="Номер телефона" />
             <div class="w-100"></div>
-            <input type="submit" value="Оставить заявку!" class="header__form_btn btn" />
+            <div class="form_bottom">
+              <input type="submit" value="Оставить заявку!" class="header__form_btn btn" />
+              <div class="form__line_left"></div>
+              <div class="form__line_right"></div>
+            </div>
           </div>
-          <div class="form__line_left"></div>
-          <div class="form__line_right"></div>
         </form>
         <p class="header__text">*Мы гарантируем конфидициальность передаваемых данных</p>
         <button class="header_button d-block">
