--- a/index.html
+++ b/index.html
@@ -93,5 +93,53 @@
       </div>
       <!-- container -->
     </header>
+    <section class="services section">
+      <div class="container">
+        <h2 class="section__title services__title">Наши услуги</h2>
+        <div class="row">
+          <div class="col-md-6 services__item d-flex align-items-center">
+            <div class="services__item_inner">
+              <h3 class="services__h3">Дизайн интерьера</h3>
+              <p class="services__text">
+                Услуга, направленная на разработку интерьеров помещений с целью обеспечить удобство
+                и эстетически приятное ощущение у человека при нахождении в помещении
+              </p>
+              <button class="services__btn btn">Оставить заявку</button>
+            </div>
+          </div>
+          <div class="col-md-6 services__item">
+            <img src="img/services/1.webp" alt="" class="services__img" />
+          </div>
+          <div class="col-md-6 services__item">
+            <img src="img/services/2.webp" alt="" class="services__img" />
+          </div>
+          <div class="col-md-6 services__item d-flex align-items-center">
+            <div class="services__item_inner">
+              <h3 class="services__h3">Дизайн экстерьера</h3>
+              <p class="services__text">
+                Услуга, направленная на разработку дизайна прилегающих элементов зданий, а также
+                дизайн самих зданий, позволяющая обеспечить удобство людей при нахождении на
+                территории
+              </p>
+              <button class="services__btn btn">Оставить заявку</button>
+            </div>
+          </div>
+          <div class="col-md-6 services__item d-flex align-items-center">
+            <div class="services__item_inner">
+              <h3 class="services__h3">Визуализация</h3>
+              <p class="services__text">
+                Услуга, направленная на разработку дизайна прилегающих элементов зданий, а также
+                дизайн самих зданий, позволяющая обеспечить удобство людей при нахождении на
+                территории
+              </p>
+              <button class="services__btn btn">Оставить заявку</button>
+            </div>
+          </div>
+          <div class="col-md-6 services__item">
+            <img src="img/services/3.webp" alt="" class="services__img" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
