--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </div>
       <!-- container -->
     </header>
+    <!-- services -->
     <section class="services section">
       <div class="container">
         <h2 class="section__title services__title">Наши услуги</h2>
@@ -138,6 +139,53 @@
           <div class="col-md-6 services__item">
             <img src="img/services/3.webp" alt="" class="services__img" />
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- calculate -->
+    <section class="calculate section">
+      <div class="container">
+        <h2 class="section__title calculate__title">Расчитать стоимость</h2>
+        <p class="calculate__subtitle subtitle">
+          Расчитайте предварительную стоимость разработки интерьера
+        </p>
+        <div class="row">
+          <div class="col-lg-7 calculate_left">
+            <div class="calc__slider">
+              <p class="calc__text">Площадь помещения:</p>
+              <div class="calc__bar">
+                <input type="range" class="calc__range" value="0" />
+                <div class="calc__point calc__point_1"></div>
+                <div class="calc__point calc__point_2"></div>
+                <div class="calc__point calc__point_3"></div>
+                <div class="calc__point calc__point_4"></div>
+              </div>
+            </div>
+            <!-- calc__slider -->
+            <div class="calc__plan">
+              <p class="plan__text">Выберите пакет:</p>
+              <div class="plan__buttons d-flex justify-content-between">
+                <button class="plan__btn">Light</button>
+                <button class="plan__btn">Medium</button>
+                <button class="plan__btn">Full</button>
+              </div>
+            </div>
+            <!-- calc__plan -->
+          </div>
+          <!-- calculate_left -->
+          <div class="col-lg-5 calculate_right">
+            <p class="calculate__text">Площадь помещения:</p>
+            <span class="calculate__value">1 000м2</span>
+            <p class="calculate__text">Средняя стоимость м2:</p>
+            <span class="calculate__value">4 850 тг.</span>
+            <p class="calculate__text">Средняя стоимость объекта:</p>
+            <span class="calculate__value">48 500 тг.</span>
+            <button class="calculate__button">Получить консультацию специалиста</button>
+            <p class="calculate__phone">
+              или позвоните нам по телефону: <br /><span>050 123 45 67</span>
+            </p>
+          </div>
+          <!-- calculate_right -->
         </div>
       </div>
     </section>
