--- a/index.html
+++ b/index.html
@@ -165,9 +165,33 @@
             <div class="calc__plan">
               <p class="plan__text">Выберите пакет:</p>
               <div class="plan__buttons d-flex justify-content-between">
-                <button class="plan__btn">Light</button>
-                <button class="plan__btn">Medium</button>
-                <button class="plan__btn">Full</button>
+                <button class="plan__btn plan__btn_1">
+                  Light
+                  <div class="btn__tip btn__tip_1">
+                    <p>
+                      План расстановки мебели 3D визуализация. Все рабочие чертежи (план полов, план
+                      потолка, развертки по стенам, план электросетей)
+                    </p>
+                  </div>
+                </button>
+                <button class="plan__btn plan__btn_2">
+                  Medium
+                  <div class="btn__tip btn__tip_2">
+                    <p>
+                      План расстановки мебели 3D визуализация. Все рабочие чертежи (план полов, план
+                      потолка, развертки по стенам, план электросетей)
+                    </p>
+                  </div>
+                </button>
+                <button class="plan__btn plan__btn_3">
+                  Full
+                  <div class="btn__tip btn__tip_3">
+                    <p>
+                      План расстановки мебели 3D визуализация. Все рабочие чертежи (план полов, план
+                      потолка, развертки по стенам, план электросетей)
+                    </p>
+                  </div>
+                </button>
               </div>
             </div>
             <!-- calc__plan -->
@@ -175,12 +199,12 @@
           <!-- calculate_left -->
           <div class="col-lg-5 calculate_right">
             <p class="calculate__text">Площадь помещения:</p>
-            <span class="calculate__value">1 000м2</span>
-            <p class="calculate__text">Средняя стоимость м2:</p>
-            <span class="calculate__value">4 850 тг.</span>
+            <span class="calculate__value">1 000м<sup>2</sup></span>
+            <p class="calculate__text">Средняя стоимость м<sup>2</sup>:</p>
+            <span class="calculate__value">4 850 грн.</span>
             <p class="calculate__text">Средняя стоимость объекта:</p>
-            <span class="calculate__value">48 500 тг.</span>
-            <button class="calculate__button">Получить консультацию специалиста</button>
+            <span class="calculate__value">48 500 грн.</span>
+            <button class="calculate__button btn">Получить консультацию специалиста</button>
             <p class="calculate__phone">
               или позвоните нам по телефону: <br /><span>050 123 45 67</span>
             </p>
