--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
             </div>
             <!-- calc__plan -->
           </div>
-          <!-- calculate_left -->
           <div class="col-lg-5 calculate_right">
             <p class="calculate__text">Площадь помещения:</p>
             <span class="calculate__value">1 000м<sup>2</sup></span>
@@ -209,7 +208,119 @@
               или позвоните нам по телефону: <br /><span>050 123 45 67</span>
             </p>
           </div>
-          <!-- calculate_right -->
+        </div>
+      </div>
+    </section>
+    <!-- portfolio -->
+    <section class="portfolio section">
+      <div class="container">
+        <h2 class="section__title portfolio__title">Портфолио</h2>
+        <div class="portfolio__buttons d-flex justify-content-center">
+          <button class="portfolio__btn">все проекты</button>
+          <button class="portfolio__btn active">экстерьеры</button>
+          <button class="portfolio__btn">жилые интерьеры</button>
+          <button class="portfolio__btn">общественные интерьеры</button>
+        </div>
+        <div class="portfolio__categories">
+          <div class="portfolio__category row exterier__category">
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/1.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/2.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/3.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/4.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/5.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/6.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+          </div>
+          <!-- portfolio__category -->
+          <div class="portfolio__category row interior__category">
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-1.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-2.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-3.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-4.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-5.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/interior-img-6.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+          </div>
+          <!-- portfolio__category -->
+          <div class="portfolio__category row public__category">
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/public-img-1.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/public-img-2.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/public-img-3.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/reading-room.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/Evabloem.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+            <div class="col-md-4 col-6 portfolio__item">
+              <a href="#">
+                <img src="img/portfolio/feature-47.webp" alt="" class="portfolio__img" />
+              </a>
+            </div>
+          </div>
+          <!-- portfolio__category -->
         </div>
       </div>
     </section>
