--- a/index.html
+++ b/index.html
@@ -371,5 +371,38 @@
         </div>
       </div>
     </section>
+    <!-- interaction -->
+    <section class="section interaction">
+      <div class="container">
+        <h2 class="section__title interaction__title">Процесс взаимодействия</h2>
+        <div class="row">
+          <div class="col-sm-6 interaction__item">
+            <img src="img/interaction/1.webp" alt="" class="interaction__img" />
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <h3 class="interaction__h3">Заполнение брифа</h3>
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <h3 class="interaction__h3">Исследование</h3>
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <img src="img/interaction/2.webp" alt="" class="interaction__img" />
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <img src="img/interaction/3.webp" alt="" class="interaction__img" />
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <h3 class="interaction__h3">Идея</h3>
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <h3 class="interaction__h3">Завершение</h3>
+          </div>
+          <div class="col-sm-6 interaction__item">
+            <img src="img/interaction/4.webp" alt="" class="interaction__img" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- companies -->
   </body>
 </html>
