--- a/index.html
+++ b/index.html
@@ -404,5 +404,25 @@
       </div>
     </section>
     <!-- companies -->
+    <section class="companies section">
+      <div class="container">
+        <h2 class="section__title companies__title">Нам доверяют более 50 компаний</h2>
+        <div class="companies__slider">
+          <div class="companies__slides d-flex align-items-center">
+            <img src="img/companies/1.png" alt="" class="company__img" />
+            <img src="img/companies/2.png" alt="" class="company__img" />
+            <img src="img/companies/3.png" alt="" class="company__img" />
+            <img src="img/companies/4.png" alt="" class="company__img" />
+            <img src="img/companies/5.png" alt="" class="company__img" />
+            <img src="img/companies/6.png" alt="" class="company__img" />
+            <img src="img/companies/3.png" alt="" class="company__img" />
+            <img src="img/companies/1.png" alt="" class="company__img" />
+            <img src="img/companies/4.png" alt="" class="company__img" />
+            <img src="img/companies/2.png" alt="" class="company__img" />
+          </div>
+        </div>
+        <input type="range" class="companies__slider-range" name="" id="" value="0" />
+      </div>
+    </section>
   </body>
 </html>
