--- a/index.html
+++ b/index.html
@@ -424,5 +424,71 @@
         <input type="range" class="companies__slider-range" name="" id="" value="0" />
       </div>
     </section>
+    <!-- team -->
+    <section class="team section">
+      <div class="container">
+        <h2 class="section__title team__title">Наша команда</h2>
+        <div class="row team__items">
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/1.webp" alt="" />
+            </div>
+            <h3 class="team__name">Ирина Притыкина</h3>
+            <p class="team__position">Директор компании</p>
+          </div>
+          <!-- team__item -->
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/2.webp" alt="" />
+            </div>
+            <h3 class="team__name">Игорь Карий</h3>
+            <p class="team__position">Финансовый директор</p>
+          </div>
+          <!-- team__item -->
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/3.webp" alt="" />
+            </div>
+            <h3 class="team__name">Илья Кондрашин</h3>
+            <p class="team__position">Инженер модельер</p>
+          </div>
+          <!-- team__item -->
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/4.webp" alt="" />
+            </div>
+            <h3 class="team__name">Маргарита Гордеева</h3>
+            <p class="team__position">3D дизайнер</p>
+          </div>
+          <!-- team__item -->
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/5.webp" alt="" />
+            </div>
+            <h3 class="team__name">Светлана Коток</h3>
+            <p class="team__position">Дизайнер интерьеров</p>
+          </div>
+          <!-- team__item -->
+          <div class="team__item col-lg-4 col-sm-6">
+            <div class="team__img">
+              <img src="img/team/6.webp" alt="" />
+            </div>
+            <h3 class="team__name">Максим Ковальский</h3>
+            <p class="team__position">Дизайнер ландшафтов</p>
+          </div>
+          <!-- team__item -->
+        </div>
+        <div class="team__quote">
+          <h3 class="quote__title">Ты - то, что ты делаешь!</h3>
+          <p class="quote__text">
+            То, что мы делаем, определяет то, кем мы являемся. Люди чувствуют старание и чувствуют
+            неаккуратность. Это связано с уважением друг к другу, так что небрежность - это
+            неуважение к самому себе.
+          </p>
+          <p class="quote__author">Ислам Куаныш</p>
+          <span class="quote__author_position">Директор</span>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
