--- a/index.html
+++ b/index.html
@@ -490,5 +490,25 @@
         </div>
       </div>
     </section>
+    <!-- blog -->
+    <section class="section blog">
+      <div class="container">
+        <h2 class="section__title blog__title">Блог</h2>
+        <div class="row">
+          <div class="blog__item col-md-6">
+            <img src="img/blog/1.webp" alt="" class="blog__img" />
+            <a href="#" class="blog__link">
+              Минимализм – это самый простой, практичный и «спорный» стиль в дизайне интерьеров</a
+            >
+          </div>
+          <div class="blog__item col-md-6">
+            <img src="img/blog/2.webp" alt="" class="blog__img" />
+            <a href="#" class="blog__link">
+              Прованс - это спокойный южный регион Франции, с великолепнейшей природой</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
