--- a/index.html
+++ b/index.html
@@ -510,5 +510,48 @@
         </div>
       </div>
     </section>
+    <!-- contacts -->
+    <section class="contacts section">
+      <div class="container">
+        <h2 class="section__title contacts__title">Остались вопросы?</h2>
+        <p class="contacts__subtitle subtitle">
+          Задайте их в форме ниже и наши специалисты свяжуться с Вами!
+        </p>
+        <div class="row">
+          <div class="col-lg-8 contacts_left">
+            <form action="" class="contacts__form">
+              <div class="row">
+                <div class="col-md-4 input__wrapper">
+                  <input type="text" class="contacts__input" placeholder="Ваше имя" />
+                </div>
+                <div class="col-md-4 input__wrapper">
+                  <input type="email" class="contacts__input" placeholder="Ваш e-mail" />
+                </div>
+                <div class="col-md-4 input__wrapper">
+                  <input type="tel" class="contacts__input" placeholder="Ваш номер телофона" />
+                </div>
+              </div>
+              <textarea
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+                class="contacts__textarea"
+                placeholder="Ваше сообщение"
+              ></textarea>
+              <input type="submit" value="Оставить заявку!" class="contacts__button btn" />
+            </form>
+          </div>
+          <div class="col-lg-4 contacts_right">
+            <p class="contacts__info info_phone">050 123 45 67</p>
+            <p class="contacts__info info_whatapp">050 123 45 67</p>
+            <p class="contacts__info info_mail">sales@23degree.kz</p>
+            <p class="contacts__info info_skype">skype: 23degree</p>
+            <p class="contacts__info info_telegram">telegram: 23degree</p>
+            <p class="contacts__schedule">График работы: с 9-00 до 18-00. Пн.-Пт.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
