--- a/index.html
+++ b/index.html
@@ -553,5 +553,61 @@
         </div>
       </div>
     </section>
+    <!-- map -->
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.651656037172!2d30.51983701578204!3d50.44758879545209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce56b2456d3b%3A0xd062ae171b57e947!2z0YPQuy4g0JrRgNC10YnQsNGC0LjQuiwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1607449233431!5m2!1sru!2sua"
+        width="100%"
+        height="600"
+        frameborder="0"
+        style="border: 0"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
+    </div>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <div class="row justify-content-between">
+            <div class="col-md-6 footer__left">
+              <div class="row">
+                <div class="col-sm-2 col-4">
+                  <ul class="footer_list">
+                    <li><a href="#" class="footer__link">Главная</a></li>
+                    <li><a href="#" class="footer__link">Тарифы</a></li>
+                  </ul>
+                </div>
+                <div class="col-sm-4 col-6 footer__column_2">
+                  <ul class="footer_list">
+                    <li><a href="#" class="footer__link">Вопросы-ответы</a></li>
+                    <li><a href="#" class="footer__link">Личный кабинет</a></li>
+                  </ul>
+                </div>
+                <div class="col-sm-6 col-12">
+                  <ul class="footer_list">
+                    <li><a href="#" class="footer__link">Вопросы-ответы</a></li>
+                    <li><a href="#" class="footer__link">Личный кабинет</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2 footer__right">
+              <p class="footer__social">Мы в социальных сетях:</p>
+              <div class="footer__social-links">
+                <a href="#" class="footer__facebook"> </a>
+                <a href="#" class="footer__google"> </a>
+                <a href="#" class="footer__inst"> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__bottom d-flex align-items-center justify-content-between">
+          <p class="footer__copy">&copy; Kazteleport, 2015. Все права защищены</p>
+          <p class="footer_genesis">Создание сайта -</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
