--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.651656037172!2d30.51983701578204!3d50.44758879545209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce56b2456d3b%3A0xd062ae171b57e947!2z0YPQuy4g0JrRgNC10YnQsNGC0LjQuiwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1607449233431!5m2!1sru!2sua"
         width="100%"
-        height="600"
+        height="600px"
         frameborder="0"
         style="border: 0"
         allowfullscreen=""
