--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <section class="section interaction">
       <div class="container">
         <h2 class="section__title interaction__title">Процесс взаимодействия</h2>
-        <div class="row">
+        <div class="row interaction-row">
           <div class="col-sm-6 interaction__item">
             <img src="img/interaction/1.webp" alt="" class="interaction__img" />
           </div>
@@ -535,7 +535,7 @@
                 name=""
                 id=""
                 cols="30"
-                rows="10"
+                rows="5"
                 class="contacts__textarea"
                 placeholder="Ваше сообщение"
               ></textarea>
