--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
     <script src="js/main.js" defer></script>
   </head>
   <body>
+    <div class="dropdown-menu">
+      <div class="dropdown-close"></div>
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav_ul">
+            <li class="nav__item">
+              <a href="#" class="menu__link menu__link_services">Наши услуги</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="menu__link menu__link_calc">Расчитать стоимость</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="menu__link menu__link_portfolio">Портфолио</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="menu__link menu__link_team">Наша команда</a>
+            </li>
+            <li class="nav__item"><a href="#" class="menu__link menu__link_blog">Блог</a></li>
+            <li class="nav__item">
+              <a href="#" class="menu__link menu__link_contacts">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     <header class="header">
       <div class="container">
         <div class="header__top d-flex justify-content-between align-items-center">
