--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/main.js" defer></script>
   </head>
   <body>
-    <div class="dropdown-menu active">
+    <div class="dropdown-menu">
       <div class="dropdown-close">
         <div class="dropdown-close__inner">
           <div class="dropdown-close__btn"></div>
